featL update chat api
